--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favico.svg">
+    <link rel="manifest" href="/manifest.json">
     <title>Pomodoro Timer</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="caminho/para/all-tailwind-classes-full-min.css">
     <script>
         // Aplica o tema escuro/claro baseado na preferência do sistema ou localStorage
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
@@ -15,38 +18,47 @@
         }
     </script>
 </head>
-<body class="bg-gradient-to-br from-red-50 to-orange-50 dark:from-slate-900 dark:to-slate-800 min-h-screen flex items-center justify-center p-4 transition-colors duration-500">
+
+<body
+    class="bg-gradient-to-br from-red-50 to-orange-50 dark:from-slate-900 dark:to-slate-800 min-h-screen flex items-center justify-center p-4 transition-colors duration-500">
     <div class="w-full max-w-md">
         <div class="bg-white/70 dark:bg-slate-900/70 backdrop-blur-xl rounded-3xl shadow-2xl p-8 md:p-12">
             <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-800 dark:text-white mb-8">Pomodoro 🍅</h1>
 
             <!-- Botões de modo -->
             <div class="flex gap-2 mb-8">
-                <button id="pomodoroBtn" class="flex-1 py-3 px-4 rounded-xl font-semibold transition-all duration-300 bg-red-500 text-white shadow-lg">
+                <button id="pomodoroBtn"
+                    class="flex-1 py-3 px-4 rounded-xl font-semibold transition-all duration-300 bg-red-500 text-white shadow-lg">
                     Pomodoro
                 </button>
-                <button id="shortBreakBtn" class="flex-1 py-3 px-4 rounded-xl font-semibold transition-all duration-300 bg-white/60 dark:bg-slate-700 text-gray-700 dark:text-gray-300 hover:bg-white/80 dark:hover:bg-slate-600">
+                <button id="shortBreakBtn"
+                    class="flex-1 py-3 px-4 rounded-xl font-semibold transition-all duration-300 bg-white/60 dark:bg-slate-700 text-gray-700 dark:text-gray-300 hover:bg-white/80 dark:hover:bg-slate-600">
                     Short Break
                 </button>
-                <button id="longBreakBtn" class="flex-1 py-3 px-4 rounded-xl font-semibold transition-all duration-300 bg-white/60 dark:bg-slate-700 text-gray-700 dark:text-gray-300 hover:bg-white/80 dark:hover:bg-slate-600">
+                <button id="longBreakBtn"
+                    class="flex-1 py-3 px-4 rounded-xl font-semibold transition-all duration-300 bg-white/60 dark:bg-slate-700 text-gray-700 dark:text-gray-300 hover:bg-white/80 dark:hover:bg-slate-600">
                     Long Break
                 </button>
             </div>
 
             <!-- Timer Display -->
             <div class="text-center mb-8">
-                <div id="timerDisplay" class="text-7xl md:text-8xl font-bold text-gray-800 dark:text-white mb-4">25:00</div>
+                <div id="timerDisplay" class="text-7xl md:text-8xl font-bold text-gray-800 dark:text-white mb-4">25:00
+                </div>
                 <div class="h-2 bg-gray-200 dark:bg-slate-700 rounded-full overflow-hidden">
-                    <div id="progressBar" class="h-full bg-red-500 transition-all duration-1000" style="width: 100%"></div>
+                    <div id="progressBar" class="h-full bg-red-500 transition-all duration-1000" style="width: 100%">
+                    </div>
                 </div>
             </div>
 
             <!-- Controles -->
             <div class="flex gap-4 justify-center">
-                <button id="startBtn" class="px-8 py-4 bg-red-500 hover:bg-red-600 text-white font-bold rounded-xl shadow-lg transition-all duration-300 transform hover:scale-105">
+                <button id="startBtn"
+                    class="px-8 py-4 bg-red-500 hover:bg-red-600 text-white font-bold rounded-xl shadow-lg transition-all duration-300 transform hover:scale-105">
                     Iniciar
                 </button>
-                <button id="resetBtn" class="px-8 py-4 bg-gray-300 dark:bg-slate-600 hover:bg-gray-400 dark:hover:bg-slate-500 text-gray-700 dark:text-gray-200 font-bold rounded-xl shadow-lg transition-all duration-300 transform hover:scale-105">
+                <button id="resetBtn"
+                    class="px-8 py-4 bg-gray-300 dark:bg-slate-600 hover:bg-gray-400 dark:hover:bg-slate-500 text-gray-700 dark:text-gray-200 font-bold rounded-xl shadow-lg transition-all duration-300 transform hover:scale-105">
                     Resetar
                 </button>
             </div>
@@ -219,6 +231,25 @@
 
         updateDisplay();
         updateButtonStyles();
+
+        // --- PWA: REGISTRO DO SERVICE WORKER ---
+        function registerServiceWorker() {
+            // Verifica se o navegador suporta Service Workers
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/sw.js')
+                        .then(registration => {
+                            console.log('Service Worker registrado com sucesso:', registration.scope);
+                        })
+                        .catch(error => {
+                            console.error('Falha no registro do Service Worker:', error);
+                        });
+                });
+            }
+        }
+        // Inicia o registro ao carregar a página
+        registerServiceWorker();
     </script>
 </body>
+
 </html>
