--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             // Verifica se o navegador suporta Service Workers
             if ('serviceWorker' in navigator) {
                 window.addEventListener('load', () => {
-                    navigator.serviceWorker.register('/sw.js')
+                    navigator.serviceWorker.register('sw.js')
                         .then(registration => {
                             console.log('Service Worker registrado com sucesso:', registration.scope);
                         })
